tests/import_feature_extras_bad.stderr
tests/import_feature_extras_bad.sl:2:1: error: SL2025: feature imports must be path-only (no alias or symbol list)
