tests/import_feature_extras_bad.sl
// Verifies import feature extras is rejected.
import "slang/feature/optional" as opt

fn main() {}
